--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuehan Portfolio</title>
+    <title>Charuzu Portfolio</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -402,27 +402,18 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>Charles Joaquin Q. Potazo</h1>
+        <p class="description">I am an IT student with passion for coding and build program for fun</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>IBITS Affiliations:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>IBITS Representative - 2023</li>
+                <li>IBITS Creative Specialist - 2024</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
-            <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
-            </ul>
         </div>
 
         <!-- Centered Links -->
